[gd_scene load_steps=2 format=3 uid="uid://374spyocm1p8"]

[ext_resource type="Script" uid="uid://bxa47g3p1pjsh" path="res://list_option_entry.gd" id="1_gc67j"]

[node name="ListOptionEntry" type="HBoxContainer"]
theme_override_constants/separation = 30
script = ExtResource("1_gc67j")

[node name="OptionButton" type="OptionButton" parent="."]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text_overrun_behavior = 3
clip_text = true

[node name="DeleteEntry" type="Button" parent="."]
custom_minimum_size = Vector2(170, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "DELETE"

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="button_up" from="DeleteEntry" to="." method="_on_delete_entry_button_up"]
